# von-neumann-toy

./: .clang-tidy  .gitignore  CMakePresets.json  README.md  download-earth.sh  download-glslang.txt  vcpkg-qt.json  vcpkg.json
src/: CMakeLists.txt  QtCMakeLists.txt  am-config.yaml  entrypoint.cpp  info.yaml  qt-window-system.cpp
src/concerns/: app-state.cpp  app-state.h  atmosphere-renderer.cpp  atmosphere-renderer.h  camera-controller.cpp  camera-controller.h  constants.cpp  constants.h  constellation-loader.cpp  constellation-loader.h  font-rendering.cpp  font-rendering.h  fxaa.cpp  fxaa.h  gravity-grid.cpp  gravity-grid.h  input-controller.cpp  input-controller.h  preprocess-data.cpp  preprocess-data.h  screen-renderer.cpp  screen-renderer.h  settings.cpp  settings.h  solar-lighting.cpp  solar-lighting.h  spice-ephemeris.cpp  spice-ephemeris.h  stars-dynamic-skybox.cpp  stars-dynamic-skybox.h  ui-controls.cpp  ui-controls.h  ui-icons.cpp  ui-icons.h  ui-overlay.cpp  ui-overlay.h  ui-primitives.cpp  ui-primitives.h  ui-tree.cpp  ui-tree.h  (+2 more)
src/concerns/helpers/: gl.cpp  gl.h  shader-loader.h  sphere-renderer.cpp  sphere-renderer.h  vulkan.cpp  vulkan.h
src/concerns/preprocessing/: skybox-textures.cpp
src/concerns/shaders/: atmosphere-fragment.glsl  atmosphere-vertex.glsl  fxaa-fragment.glsl  fxaa-vertex.glsl  skybox-fragment.glsl  skybox-vertex.glsl
src/materials/earth/: draw.cpp  earth-material.h  setup.cpp  voxel-octree.cpp  voxel-octree.h
src/materials/earth/economy/: cities.proto  earth-economy.cpp  earth-economy.h  economy-renderer-draw.cpp  economy-renderer-setup.cpp  economy-renderer.h
src/materials/earth/helpers/: coordinate-conversion.cpp  coordinate-conversion.h
src/materials/earth/initialization/: atmosphere-shader.cpp  earth-octree-mesh.cpp  earth-surface.cpp
src/materials/earth/masks/: ice-from-color.cpp  landmass-from-color.cpp
src/materials/earth/preprocessing/: atmosphere-luts.cpp  atmosphere-transmittance-lut.cpp  color-from-blue-marble.cpp  night-lights-from-viirs.cpp  normal-and-height-from-elevation.cpp  specular-from-modis-reflectance.cpp  water-scattering-lut.cpp  wind-from-netcfd.cpp
src/materials/earth/shaders/: atmosphere-fragment.glsl  atmosphere-vertex.glsl  earth-fragment.glsl  earth-greedy-mesh-geometry.glsl  earth-vertex.glsl  earth-voxel-ray-march-vertex.glsl  earth-voxel-ray-march.glsl
src/materials/helpers/: cubemap-conversion.cpp  cubemap-conversion.h  gl.cpp  gl.h  greedy-meshing.glsl  julian.cpp  noise.cpp  noise.h  signed-distance-fields.glsl  signed-distance-fields.h  sin-distance-fields.glsl  voxel-ray-traversal.glsl  wgs84-geodetic.glsl  wgs84-geodetic.h
src/materials/screen/: single-pass-screen.frag  single-pass-screen.vert  ui-overlay.frag  ui-overlay.vert
src/types/: celestial-body.cpp  celestial-body.h  dynamic-lod-sphere.cpp  dynamic-lod-sphere.h  lagrange-point.cpp  lagrange-point.h  magnetic-field.cpp  magnetic-field.h
src/windows/: controls.qml  data.qml  launcher.qml
